add feature findByAgeRestriction and test for it